added non-generic version of _.once and a simple test

--- a/Underscore/Underscore.csproj
+++ b/Underscore/Underscore.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UnderscoreActionExecutionBase.cs" />
+    <Compile Include="OnceExecution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Underscore.cs" />
   </ItemGroup>
