--- a/Underscore.Specs/packages.config
+++ b/Underscore.Specs/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Machine.Specifications" version="0.9.1" targetFramework="net45" />
   <package id="Machine.Specifications.Should" version="0.7.2" targetFramework="net45" />
+  <package id="NSubstitute" version="1.8.0.0" targetFramework="net45" />
 </packages>
