--- a/Underscore/Underscore.csproj
+++ b/Underscore/Underscore.csproj
@@ -39,8 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnderscoreActionExecutionBase.cs" />
-    <Compile Include="OnceExecution.cs" />
+    <Compile Include="Core\Generic\GenericUnderscoreExecutionBase.cs" />
+    <Compile Include="Core\UnderscoreActionExecutionBase.cs" />
+    <Compile Include="Functions\Once.cs" />
+    <Compile Include="Functions\Registration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Underscore.cs" />
   </ItemGroup>
