--- a/Underscore.Specs/Underscore.Specs.csproj
+++ b/Underscore.Specs/Underscore.Specs.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Once\GenericOnceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Once\OnceTest.cs" />
     <Compile Include="Once\TestData.cs" />
