--- a/Underscore/Underscore.csproj
+++ b/Underscore/Underscore.csproj
@@ -40,8 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Generic\GenericUnderscoreExecutionBase.cs" />
+    <Compile Include="Core\IExecutionBehavior.cs" />
+    <Compile Include="Core\IExecutionCallback.cs" />
+    <Compile Include="Functions\OnceBehavior.cs" />
     <Compile Include="Core\UnderscoreActionExecutionBase.cs" />
-    <Compile Include="Functions\Once.cs" />
     <Compile Include="Functions\Registration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Underscore.cs" />
