rename refactoring and addressing stylecop issues

--- a/Underscore/Underscore.csproj
+++ b/Underscore/Underscore.csproj
@@ -39,11 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Generic\GenericUnderscoreExecutionBase.cs" />
+    <Compile Include="Core\Generic\ExecutionContext.cs" />
     <Compile Include="Core\IExecutionBehavior.cs" />
     <Compile Include="Core\IExecutionCallback.cs" />
     <Compile Include="Functions\OnceBehavior.cs" />
-    <Compile Include="Core\UnderscoreActionExecutionBase.cs" />
+    <Compile Include="Core\ExecutionContext.cs" />
     <Compile Include="Functions\Registration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Underscore.cs" />
