restructuring codes, namespace refactoring

--- a/Underscore.Specs/Underscore.Specs.csproj
+++ b/Underscore.Specs/Underscore.Specs.csproj
@@ -51,10 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Once\GenericOnceTest.cs" />
+    <Compile Include="Functions\Once\GenericOnceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Once\OnceTest.cs" />
-    <Compile Include="Once\TestData.cs" />
+    <Compile Include="Functions\Once\OnceTest.cs" />
+    <Compile Include="Functions\Once\TestData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Underscore\Underscore.csproj">
