added generic registraion, added tests, replaced timer start/stop calling

--- a/Underscore.Specs/Underscore.Specs.csproj
+++ b/Underscore.Specs/Underscore.Specs.csproj
@@ -51,6 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Functions\Debounce\DebounceTestData.cs" />
+    <Compile Include="Functions\Debounce\GenericTrailingDebounceTest.cs" />
     <Compile Include="Functions\Debounce\TrailingDebounceTest.cs" />
     <Compile Include="Functions\Once\GenericOnceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
