--- a/Underscore.Specs/Underscore.Specs.csproj
+++ b/Underscore.Specs/Underscore.Specs.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Functions\Debounce\LeadingDebounceTest.cs" />
     <Compile Include="Functions\Debounce\TrailingDebounceTest.cs" />
     <Compile Include="Functions\Once\GenericOnceTest.cs" />
+    <Compile Include="Functions\Throttle\TestData.cs" />
+    <Compile Include="Functions\Throttle\ThrottleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Functions\Once\OnceTest.cs" />
     <Compile Include="Functions\Once\TestData.cs" />
